Fix to checkboxes when loading data from a previously saved Drupal form. helpText for species_checklist control now left aligns.

--- a/core/trunk/media/css/default_site.css
+++ b/core/trunk/media/css/default_site.css
@@ -286,12 +286,17 @@ li.ui-state-error {
   border: none !important;
 }
 
-.helpText {
+.helpText, .helpTextLeft {
   color:gray;
   font-size:80%;
-  margin:-4px 0 8px 164px;
+  margin:-4px 0 8px 0px;
   line-height: 1em;
 }
+
+.helpText {
+  margin-left: 164px;
+}
+
 
 .progress {
   width: 100%;
